Refactor: Review, ReviewImg Dto 생성 및 소스 간결화